--- a/story/mystory.html
+++ b/story/mystory.html
@@ -11,12 +11,14 @@
        * element that contains the map. */
         #map {
           height: 100%;
+          width: 60%;
+          margin: 0;
         }
 
         html,
         body {
           height: 100%;
-          margin: 0;
+          margin: 20px;
           padding: 0;
         }
     </style>
