--- a/story/mystory.html
+++ b/story/mystory.html
@@ -26,10 +26,43 @@
 
       function initMap() {
         map = new google.maps.Map(document.getElementById("map"), {
-          center: { lat: 43.6487, lng: -79.38544 },
-          zoom: 10,
+          center: { lat: 40.41679422199336, lng: -3.703790099660927 },
+          zoom: 3,
         });
       }
+
+      function initMap(): void {
+        const myLatlng = { lat: 40.41679422199336, lng: -3.703790099660927 };
+
+        const map = new google.maps.Map(
+          document.getElementById("map") as HTMLElement,
+          {
+            zoom: 3,
+            center: myLatlng,
+          }
+        );
+
+        const marker = new google.maps.Marker({
+          position: myLatlng,
+          map,
+          title: "Click to zoom",
+        });
+
+        map.addListener("center_changed", () => {
+          // 3 seconds after the center of the map has changed, pan back to the
+          // marker.
+          window.setTimeout(() => {
+            map.panTo(marker.getPosition() as google.maps.LatLng);
+          }, 3000);
+        });
+
+        marker.addListener("click", () => {
+          map.setZoom(8);
+          map.setCenter(marker.getPosition() as google.maps.LatLng);
+        });
+      }
+
+      
     </script>
   </head>
   <body>
