--- a/story/mystory.html
+++ b/story/mystory.html
@@ -33,19 +33,16 @@
       let map;
 
       function initMap() {
-        map = new google.maps.Map(document.getElementById("map"), {
-          center: { lat: 40.41679422199336, lng: -3.703790099660927 },
-          zoom: 3,
-        });
-      }
-      function initMap() {
-        const myLatlng = { lat: -25.363, lng: 131.044 };
+        const locations = [
+          { lat: -25.363, lng: 131.044 },
+          {lat: 40.41679422199336, lng: -3.703790099660927}
+        ];
         const map = new google.maps.Map(document.getElementById("map"), {
           zoom: 4,
-          center: myLatlng,
+          center: {lat: 40.41679422199336, lng: -3.703790099660927},
         });
         const marker = new google.maps.Marker({
-          position: myLatlng,
+          position: locations,
           map,
           title: "Click to zoom",
         });
