--- a/story/mystory.html
+++ b/story/mystory.html
@@ -39,7 +39,7 @@
         ];
         const map = new google.maps.Map(document.getElementById("map"), {
           zoom: 3,
-          center: {lat: 40.41679422199336, lng: -3.703790099660927},
+          center: {lat: 35.513834, lng: -152.517009}
         });
         const marker = new google.maps.Marker({
           position: locations,
