--- a/story/mystory.html
+++ b/story/mystory.html
@@ -43,12 +43,12 @@
         const markers = locations.map((location, i) => {
           return new google.maps.Marker({
             position: location,
-            title: "Click to zoom",
+            label: labels[i % labels.length],
           });
         });
 
         const locations = [
-          { lat: 43.64291350794583, lng: -79.38701424550148 },
+          { lat: 43.64291350794583, lng: -79.38701424550148},
           {lat: 14.598114, lng: 120.982938}
         ];
       }   
