--- a/story/mystory.html
+++ b/story/mystory.html
@@ -33,12 +33,12 @@
           center: { lat: 36.648592, lng: -148.893669}
         });
 
-        const phil = { lat: 14.597943, lng: 120.982735}
-        const tor = { lat: 43.64257734388785, lng: -79.3870584627254}
-        const van = { lat: 49.30420011346719, lng: -123.14409857068425}
-        const cali = { lat: 33.8201796932808, lng: -117.9187555732683}
-        const tex = { lat: 29.426077387630365, lng: -98.48613331953025}
-        const chi = { lat: 41.882595510278875, lng: -87.6225102844922}
+        const phil = { lat: 14.597943, lng: 120.982735};
+        const tor = { lat: 43.64257734388785, lng: -79.3870584627254};
+        const van = { lat: 49.30420011346719, lng: -123.14409857068425};
+        const cali = { lat: 33.8201796932808, lng: -117.9187555732683};
+        const tex = { lat: 29.426077387630365, lng: -98.48613331953025};
+        const chi = { lat: 41.882595510278875, lng: -87.6225102844922};
 
         const marker = new google.maps.Marker({
           position: phil,
