flightpaths and text

--- a/story/mystory.html
+++ b/story/mystory.html
@@ -2,37 +2,39 @@
 
 <html>
   <head>
-    <title>My Story</title>
+    <title>FAMILY TIES</title>
     <script src="https://polyfill.io/v3/polyfill.min.js?features=default"></script>
     <script src="map.js"></script>
     <style>
         h1 {
-          font-family: Georgia, 'Times New Roman', Times, serif
+          font-family: Georgia, 'Times New Roman', Times, serif;
+          text-align: center;
         }
-
         p {
           font-family: 'Courier New', Courier, monospace;
+          text-align: center;
         }
-
         #map {
           height: 100%;
           width: 100%;
         }
-
         html,
         body {
           height: 100%;
           margin: 20px;
           padding: 0;
+          background-color: #E6EBF0;
         }
     </style>
   </head>
   <body>
-    <h1>My Story</h1>
-    <p>something about my map</p>
+    <h1>FAMILY TIES</h1>
+    <p>Hailing from our motherland, The Philippines, my family immigrated to places all over the world.
+      My immidiate family decided to settle in pockets across North America.
+      Check out the cities that my family members now call home below.
+    </p>
     <div id="map"></div>
-    <p>something else about my map</p>
-    
+    <p>Creator: Jade Lacsamana</p>
     <!-- Async script executes immediately and must be after any DOM elements used in callback. -->
     <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDv3MGflguusDaLmV_-BUlmuoUI4EbM88w&callback=initMap&v=weekly" async>
     </script>
