--- a/story/mystory.html
+++ b/story/mystory.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-
+<!-- code modified from https://developers.google.com/maps/documentation/javascript/examples/map-simple#maps_map_simple-html -->
 <html>
   <head>
     <title>FAMILY TIES</title>
